--- a/创业基础点子.md
+++ b/创业基础点子.md
@@ -15,7 +15,7 @@
 
 ​		下图是平台系统的基础构成：
 
-![](https://shitu-query-nj.su.bcebos.com/2021-04-20/10/72a59a3ea949affb?authorization=bce-auth-v1%2F7e22d8caf5af46cc9310f1e3021709f3%2F2021-04-20T02%3A26%3A34Z%2F300%2Fhost%2F377544b41f284dea59039c600f3212a1eba859c9db368db87cb8c9d578dc4b38)
+![image-20210420130512796](doc/image-20210420130512796.png)
 
 **目标用户**：在校大学生
 
@@ -25,6 +25,12 @@
       2. 平台工作人员现场考察，亲身体验，为用户提供优秀的出行路线。
       3. 对平台用户进行学生认证，认证成功的学生可以享受更具体、丰富、个性化的出行建议，同时也为认证成功的用户开启路线、商家、出行伙伴的评价系统
       4. 依据用户的个性化要求尽可能匹配到合适的同学一起出游。
+
+**品牌推广**：
+
+1. 线下推广：与商家商议实行优惠政策
+2. 线上推广：建立各种百度词条（百度百科、搜搜百科等），在各大社交平台（如微博、微信、QQ）上推广
+3. 前期作为一个免费的推荐类型的 APP 先打入市场，后期逐步和商家建立长期合作，获得更多出行资源
 
 ## 项目可行性
 
@@ -52,4 +58,41 @@
 4. 交友 APP 没有学生实名认证，无法提供安全保障
 5. 携程等旅游 APP 更侧重于旅游而非同城出行计划
 
+
+
+
 ### 大学生的消费水平
+
+​		一线城市学生消费水平和消费结构图如下：
+
+![](doc/image-20210420133555062.png)
+
+![](doc/image-20210420134922481.png)
+
+​		可以看出，大学生*生活费金额*普遍位于1500～2000元之间，并且*消费占比均值最高*的是三餐
+
+​		并且，大学生的消费水平在未来几年内预计会逐渐增长，随着生活水平的逐渐提高，大学生的消费水平同时也逐渐提高，但总体消费水平浮动不大。
+
+### 行业结构分析
+
+<table>
+    <tr>
+        <td><center><img src='doc/image-20210420141613283.png'></center></td>
+        <td><center><img src='doc/image-20210420141733635.png'></center></td>
+    </tr>
+</table>
+
+美食 APP 使用类型如下：
+
+![](doc/image-20210420144304897.png)
+
+大多数APP中定外卖、推荐分享是主要功能。根据调查问卷与APP数据统计可知，用户在美团等APP上使用功能最多的是查找餐厅、团购、买单等活动。
+
+## 竞争对手
+
+行业主要app使用率格局明朗：
+
+- 美团使用率显著高于其它app，94.3%的行业用户使用过美团进行消费。
+- 而且其它app间的使用率差距也十分明显，第二位的大众点评有近五成的使用率，而第二梯队的口碑和百度糯米为百分之二三十的使用率。
+
+![image-20210420144542259](doc/image-20210420144542259.png)
