--- a/创业基础点子.md
+++ b/创业基础点子.md
@@ -96,3 +96,17 @@
 - 而且其它app间的使用率差距也十分明显，第二位的大众点评有近五成的使用率，而第二梯队的口碑和百度糯米为百分之二三十的使用率。
 
 ![image-20210420144542259](doc/image-20210420144542259.png)
+
+**结论**：定位方向不同，市场空间大
+
+## 团队适配度
+
+1. 团队队员都是在校大学生，对于什么商家和路线对于大学生有吸引力有自己的见解
+2. 团队队员都是计算机学院学生，做一个 APP 和网页平台是轻车熟路
+
+## 财务可行性
+
+### 资金投入
+
+1. 做一个平台、APP 的启动资金较小（本身都是计算机学院的同学，会编程）
+2. 
