--- a/创业基础点子.md
+++ b/创业基础点子.md
@@ -7,7 +7,7 @@
 3. 想玩大型多人项目总是凑不齐人，只能悻悻离去。
 4. 怎样从网上一堆攻略中，辨别所谓的网红店的质量。
 5. 经常出现到了饭店却发现要排号，在门口饥肠辘辘地等了两个钟头才吃上饭的情况。
-6. 虽然下沙大学城有这么多学校，但是发现平时根本接触不到其他学校的xjj、xgg
+6. 虽然下沙大学城有这么多学校，但是发现平时根本接触不到其他学校的xjj、xgg。
 
 ## 项目简介
 
@@ -21,30 +21,30 @@
 
 **运作方法**：
 
-   1. 与商店合作，让商店提供他们的介绍信息和实时客流量信息，可以的话也可以提供优惠。
-      2. 平台工作人员现场考察，亲身体验，为用户提供优秀的出行路线。
-      3. 对平台用户进行学生认证，认证成功的学生可以享受更具体、丰富、个性化的出行建议，同时也为认证成功的用户开启路线、商家、出行伙伴的评价系统
-      4. 依据用户的个性化要求尽可能匹配到合适的同学一起出游。
+   1. *与商店合作*，让商店提供他们的介绍信息和实时客流量信息，可以的话也可以提供优惠。
+   2. 平台工作人员*现场考察*，亲身体验，为用户提供优秀的出行路线。
+   3. 对平台用户进行*学生认证*，认证成功的学生可以享受更具体、丰富、个性化的出行建议，同时也为认证成功的用户开启路线、商家、出行伙伴的*评价系统*。
+   4. 依据用户的个性化要求尽可能*匹配*到合适的同学一起出游。
 
 **品牌推广**：
 
-1. 线下推广：与商家商议实行优惠政策
-2. 线上推广：建立各种百度词条（百度百科、搜搜百科等），在各大社交平台（如微博、微信、QQ）上推广
-3. 前期作为一个免费的推荐类型的 APP 先打入市场，后期逐步和商家建立长期合作，获得更多出行资源
+1. 线下推广：与商家商议实行优惠政策。
+2. 线上推广：建立各种百度词条（百度百科、搜搜百科等），在各大社交平台（如微博、微信、QQ）上推广。
+3. 前期作为一个免费的推荐类型的 APP 先打入市场，后期逐步和商家建立长期合作，获得更多出行资源。
 
 ## 项目可行性
 
-​		目前的市场上，没有和我们的项目一样，能够提供同城一条龙出行个性化建议服务的，也没有提供安全的出行伙伴的平台
+​		目前的市场上，没有和我们的项目一样，能够提供同城一条龙出行个性化建议服务的，也没有提供安全的出行伙伴的平台。
 
 ​		而我们正可以补充这一空缺。
 
 ​		我们的**优势**在于：
 
-1. 自己本身就是在校大学生，我们知道当代大学生喜欢去什么地方玩，也知道当代大学生对哪方面感兴趣，可以对商家和路线进行个性化分析和辨别
-2. 通过收集周边同学的出行经验与平台工作人员的实地考察，我们可以提供一整天的出行路线，避免了同学们出行的时候发生上午逛完了想去的地方，下午不知道该去哪的尴尬情况
-3. 为不同的出行情况（如情侣、基友、团建等）提供个性化的出行建议
-4. 通过对学生的实名认证（拍照上传学生证等方式）尽量保证学生的出行安全
-5. 对通过平台结伴出行的同学们进行定位获取，并提供一键报警服务，避免恶性事件发生
+1. 自己本身就是在校大学生，我们知道当代大学生喜欢去什么地方玩，也知道当代大学生对哪方面感兴趣，可以对商家和路线进行个性化分析和辨别。
+2. 通过收集周边同学的出行经验与平台工作人员的实地考察，我们可以提供一整天的出行路线，避免了同学们出行的时候发生上午逛完了想去的地方，下午不知道该去哪的尴尬情况。
+3. 为不同的出行情况（如情侣、基友、团建等）提供个性化的出行建议。
+4. 通过对学生的实名认证（拍照上传学生证等方式）尽量保证学生的出行安全。
+5. 对通过平台结伴出行的同学们进行定位获取，并提供一键报警服务，避免恶性事件发生。
 
 ## 市场吸引力
 
@@ -52,11 +52,11 @@
 
 如上述所说，现在的市场上没有与我们定位相同的平台：
 
-1. 美团专注于 O2O 模式服务，没有完整的出行建议
-2. 知乎匿名提问和回答减低了可信度
-3. 大众点评刷评论的较多，网红打卡点不一定好
-4. 交友 APP 没有学生实名认证，无法提供安全保障
-5. 携程等旅游 APP 更侧重于旅游而非同城出行计划
+1. 美团专注于 O2O 模式服务，没有完整的出行建议。
+2. 知乎匿名提问和回答减低了可信度。
+3. 大众点评刷评论的较多，网红打卡点不一定好。
+4. 交友 APP 没有学生实名认证，无法提供安全保障。
+5. 携程等旅游 APP 更侧重于旅游而非同城出行计划。
 
 
 
@@ -69,7 +69,7 @@
 
 ![](doc/image-20210420134922481.png)
 
-​		可以看出，大学生*生活费金额*普遍位于1500～2000元之间，并且*消费占比均值最高*的是三餐
+​		可以看出，大学生*生活费金额*普遍位于1500～2000元之间，并且*消费占比均值最高*的是三餐。
 
 ​		并且，大学生的消费水平在未来几年内预计会逐渐增长，随着生活水平的逐渐提高，大学生的消费水平同时也逐渐提高，但总体消费水平浮动不大。
 
@@ -101,12 +101,21 @@
 
 ## 团队适配度
 
-1. 团队队员都是在校大学生，对于什么商家和路线对于大学生有吸引力有自己的见解
-2. 团队队员都是计算机学院学生，做一个 APP 和网页平台是轻车熟路
+1. 团队队员都是在校大学生，对于什么商家和路线对于大学生有吸引力有自己的见解。
+2. 团队队员都是计算机学院学生，做一个 APP 和网页平台是轻车熟路。
 
 ## 财务可行性
 
 ### 资金投入
 
-1. 做一个平台、APP 的启动资金较小（本身都是计算机学院的同学，会编程）
-2. 
+1. 做一个平台、APP 的启动资金较小（本身都是计算机学院的同学，会编程）。
+2. 找微博大V、有名的微信公众号等社交平台做推广，需要广告费。
+3. 对评价质量较高的用户进行奖励。
+4. 租借云服务器搭建平台，并对平台进行维护、升级。
+
+### 盈利模式
+
+1. 在 App 启动界面投放广告。
+2. 平台知名度上升后与店家合作、分成。
+3. 店家加盟费用。
+4. 平台成熟后实现会员制，非会员可以享有基础服务（即基础的线路规划、有限次的匹配伙伴），而会员可以享有所有服务（包括但不限于个性化线路定制、无限次伙伴匹配、商家优惠券）。当然由于面向的对象为学生，定价不会高，主要的收入还是店家分成和广告。
